# Senter

./: .gitignore  AGENT.md  DEMO_GUIDE.md  GITHUB_STATUS.md  MCP_INTEGRATION_ROADMAP.md  QUICKSTART.md  README.md  RESEARCH_VISION.md  build_v1.1.md  build_v2.1.md  build_v2.2.md  build_v2.3.md  build_v2.4.md  build_v2.5.md  build_v2.md  gap_v1.md  gap_v2.md  gap_v3.md  genome.yaml  implementation_spec.md  pyproject.toml  ralph-wiggums.skill  ralph_wiggums.md  requirements.txt  run.sh  senter.py  senter_full_implementation.md  senter_gap_vision.md  senter_gap_vision_v3.md  senter_integration_hardening.md  senter_polish_prompts.md  setup.py  start-mvp.sh
Focuses/: __init__.py  focus_factory.py  review_chain.py  senter_md_parser.py
Functions/: context_gatherer.py  embedding_router.py  embedding_utils.py  goal_tracker.py  intelligent_selection.py  learner.py  memory.py  omniagent.py  parallel_inference.py  senter_logger.py  web_search.py
audio/: audio_pipeline.py
backup_v2/: AGENTS.md  ARCHITECTURE.md  GITHUB_READY.md  README.md  SENTER_DOCUMENTATION.md  SENTER_FORMAT.md  SENTER_FORMAT_SPECIFICATION.md  requirements.txt  senter.tcss  setup.py  setup_senter.py  test_senter_minimal.py
config/: daemon_config.json  mcp_servers.json
core/: __init__.py  composer.py  config_validator.py  engine.py  genome_parser.py  intent.py
coupling/: __init__.py  human_model.py  joint_state.py  protocols.py  trust.py
daemon/: __init__.py  circuit_breaker.py  encryption.py  errors.py  health_monitor.py  http_server.py  ipc_client.py  ipc_server.py  json_logger.py  message_bus.py  (+4 more)
(+323 files in other folders)
